syntax = "proto3";

package cn.gdrfgdrf.connectComputer.Protobuf.Action.Account.Error;

option java_package = "cn.gdrfgdrf.Protobuf.Action.Account";
option java_outer_classname = "AccountErrorProto";

message LoginFailedPacket {
}

message TokenInvalidPacket {
}

message TokenExpiredPacket {
}